Fix vertical alignment in editor for Columns
#1149

--- a/src/assets/scss/columns-editor.scss
+++ b/src/assets/scss/columns-editor.scss
@@ -24,6 +24,32 @@ $base-selector: '> .block-editor-inner-blocks > .block-editor-block-list__layout
         margin: 0 auto;
       }
 
+      // Vertical alignment
+      &.columns-valign-middle,
+      &.columns-valign-bottom,
+      &.columns-valign-top {
+
+        #{$base-selector} > .wp-block {
+
+          > .advgb-column {
+            display: grid;
+            height: 100%;
+          }
+        }
+      }
+
+      &.columns-valign-middle #{$base-selector} > .wp-block > .advgb-column > .advgb-column-inner {
+        align-self: center;
+      }
+
+      &.columns-valign-bottom #{$base-selector} > .wp-block > .advgb-column > .advgb-column-inner {
+        align-self: end;
+      }
+
+      &.columns-valign-top #{$base-selector} > .wp-block > .advgb-column > .advgb-column-inner {
+        align-self: start;
+      }
+
       // Spacing between columns
       &.gutter-10 #{$base-selector} > div:not(:first-child) {
           margin-left: 10px;
